[tool.poetry]
name = "moe_musicbrainz"
version = "0.1.0"
description = "Template plugin repository."
authors = ["Jacob Pavlock <jtpavlock@gmail.com>"]
documentation = "https://moe-musicbrainz.readthedocs.io/en/latest/"
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
moe = "^2.0.0"

[tool.poetry.group.test.dependencies]
debugpy = "^1.4.1"
pytest = "^6.0.1"
pytest-cov = "^2.10.0"

[tool.poetry.group.lint.dependencies]
black = "^22.6.0"
commitizen = "^2.17.12"
darglint = "^1.8.1"
flake8 = "^5.0.4"
flake8-alphabetize = "^0.0.17"
flake8-bugbear = "^22.7.1"
flake8-comprehensions = "^3.10.0"
flake8-docstrings = "^1.5.0"
flake8-pytest-style = "^1.6.0"
flake8-use-fstring = "^1.1"
"github3.py" = "^3.2.0"
isort = "^5.10.1"
mccabe = "^0.7.0"
pre-commit = "^2.6.0"
pyright = "^1.1.267"

[tool.poetry.group.docs.dependencies]
furo = "*"
pypandoc = "^1.9"
Sphinx = "^5.2.3"

[tool.poetry.plugins."moe.plugins"]
"musicbrainz" = "moe_musicbrainz"

[tool.commitizen]
name = "cz_customize"
version = "0.1.0"
version_files = [
    "pyproject.toml:^version",
]
tag_format = "v$version"

[tool.commitizen.customize]
schema_pattern = '(build|ci|deprecate|docs|feat|fix|perf|refactor|release|style|test)(\(\w+\))?!?:\s\S.*'

[tool.isort]
profile = 'black'

[tool.pytest.ini_options]
log_cli_level = 10
addopts = "--color=yes"
markers = [
    "network: tests that make network calls",
    "darwin: tests that should only run on apple",
    "linux: tests that should only run on linux",
    "win32: tests that should only run on windows"
]

[tool.pyright]
pythonPlatform = "All"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
