[tool.poetry]
name = "moe_musicbrainz"
version = "1.0.2"
description = "Template plugin repository."
authors = ["Jacob Pavlock <jtpavlock@gmail.com>"]
documentation = "https://moe-musicbrainz.readthedocs.io/en/latest/"
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
moe = "^2.1.3"

[tool.poetry.group.test.dependencies]
debugpy = "^1.4.1"
pytest = "^8.0.0"
pytest-cov = "^6.0.0"
tox = "^4.0.0"

[tool.poetry.group.lint.dependencies]
black = "^24.0.0"
commitizen = "^3.0.0"
darglint = "^1.8.1"
flake8 = "^7.0.0"
flake8-alphabetize = "^0.0.19"
flake8-bugbear = "^24.0.0"
flake8-comprehensions = "^3.10.0"
flake8-docstrings = "^1.5.0"
flake8-pytest-style = "^2.0.0"
flake8-use-fstring = "^1.1"
"github3.py" = "^4.0.0"
isort = "^5.10.1"
mccabe = "^0.7.0"
pre-commit = "^4.0.0"
pyright = "^1.1.267"

[tool.poetry.group.docs.dependencies]
furo = "*"
pypandoc = "^1.9"
Sphinx = "^7.0.0"

[tool.poetry.plugins."moe.plugins"]
"musicbrainz" = "moe_musicbrainz"

[tool.commitizen]
name = "cz_customize"
version = "1.0.2"
version_files = [
    "pyproject.toml:^version",
]
tag_format = "v$version"

[tool.commitizen.customize]
bump_pattern = '^(build|deprecate|feat|fix|perf)'
bump_map = { feat = "MINOR", build = "PATCH", deprecate = "PATCH", fix = "PATCH", perf = "PATCH" }
schema_pattern = '(build|ci|deprecate|docs|feat|fix|perf|refactor|release|style|test)(\(\w+\))?!?:\s\S.*'

[tool.isort]
profile = 'black'

[tool.pytest.ini_options]
log_cli_level = 10
addopts = "--color=yes"
markers = [
    "network: tests that make network calls",
    "darwin: tests that should only run on apple",
    "linux: tests that should only run on linux",
    "win32: tests that should only run on windows"
]

[tool.pyright]
exclude = [
    "alembic", "tests"
]
pythonPlatform = "All"

[build-system]
requires = ["poetry-core>=1.0"]
build-backend = "poetry.core.masonry.api"
